2023-10-23T08:23:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6610609985 # 890
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 3 38
* notice: prev accum: outdated-unq outdated-all / unq all: 263 553 / 279 591
* notice: next accum: outdated-unq outdated-all / unq all: 263 553 / 280 592
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-23T01:16:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6607500201 # 889
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 3 38
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 279 591
* notice: next accum: outdated-unq outdated-all / unq all: 263 553 / 279 591
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-08] / []

2023-10-22T16:21:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6604914569 # 888
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-22
* notice: last 14d: unq all: 3 39
* notice: prev accum: outdated-unq outdated-all / unq all: 262 552 / 279 590
* notice: next accum: outdated-unq outdated-all / unq all: 262 552 / 279 591
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-22]

2023-10-22T08:20:07Z: