@@ -1,12 +1,7 @@
 {
-  "count": 38,
+  "count": 37,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2023-10-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-10-10T00:00:00Z",
       "count": 5,
