@@ -1,3 +1,12 @@
+2023-10-23T16:22:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6616108396 # 891
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
+* notice: last 14d: unq all: 3 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 263 553 / 280 592
+* notice: next accum: outdated-unq outdated-all / unq all: 264 555 / 280 592
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-09] / []
+
 2023-10-23T08:23:14Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6610609985 # 890
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
